<resources>
    <string name="app_name">BigTuna</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="_10_off">10% OFF</string>
    <string name="product_title">product title</string>
    <string name="product_description">product description</string>
    <string name="category">category</string>
    <string name="quantity">quantity</string>
    <string name="ksh_10">ksh.10</string>
    <string name="_29_01_2022">29/01/2022</string>
    <string name="dasani">Dasani</string>
    <string name="total_amount_ksh_100">Total Amount: Ksh 100</string>
    <string name="in_progress">In Progress</string>
    <string name="order_12345">Order: 12345</string>
</resources>