<?xml version="1.0" encoding="utf-8"?>
<!--Bottom sheet layout to display product details and edit/delete options-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!---->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/shape_rect01"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_back_white"/>

        <ImageButton
            android:id="@+id/deleteBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_delete_white"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <ImageButton
            android:id="@+id/editBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_edit_white"
            android:layout_toStartOf="@id/deleteBtn"
            android:layout_toLeftOf="@id/deleteBtn" />

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:text="Product Details"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/productIconIv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="130dp"
        android:background="@color/colorPrimary"
        android:adjustViewBounds="true"
        android:padding="5dp"
        android:src="@drawable/ic_add_shopping_white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/productIconIv"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/discountNoteTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect02"
        android:padding="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:layout_marginStart="20dp"
        android:text="@string/_10_off"
        android:textColor="#C9C9C9"
        android:textSize="11sp"/>

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/product_title"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:text="@string/product_description"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/categoryTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/category"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/quantityTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/quantity"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorBlack"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/discountedPriceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ksh_10"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorGray02"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/originalPriceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ksh.15"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/discountedPriceTv"
            android:textColor="@color/colorGray02"
            android:layout_toRightOf="@id/discountedPriceTv" />


    </RelativeLayout>
</LinearLayout>














